--- a/templates/home.html
+++ b/templates/home.html
@@ -44,6 +44,7 @@
     <div class="card-body">
       <h5 class="card-title">Book Name : {{book.book_name}}</h5>
       <h5 class="card-title">Book Price : {{book.book_price}}</h5>
+      <h5 class="card-title">Book Quantity : {{book.book_quantity}}</h5>
       <h5 class="card-title">
         Book Category : {{book.category.category_name}}
       </h5>
