--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -7,6 +7,7 @@
     <div class="card-body">
         <h5 class="card-title">Book Name : {{book.book_name}}</h5>
         <h5 class="card-title">Book Price : {{book.book_price}}</h5>
+        <h5 class="card-title">Book Quantity : {{book.book_quantity}}</h5>
         <h5 class="card-title">
           Book Category : {{book.category.category_name}}
         </h5>
@@ -21,4 +22,20 @@
   </div>
 </div>
 <br>
+
+<div class="card">
+  <div class="card-header">
+    Review
+  </div>
+  {% if data %}
+  {% for dt in data %}
+  <div class="card-body">
+    <h5 class="card-title">{{dt.name}}</h5>
+    <p class="card-text">{{dt.body}}</p>
+    <p class="card-text">{{dt.star}}</p>
+    <p class="card-text">{{dt.time}}</p>
+  </div>
+  {% endfor %}
+  {% endif %}
+</div>
 {% endblock %}
